--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,7 @@ body,html{
     justify-content: center;
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
+    background: #080808;
+    color: #fff;
 }
