--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,3 +1,4 @@
+/* SECTION 1 */
 #about{
     padding: 80px 0;
     color: #ababab;
@@ -60,4 +61,52 @@
 }
 .tab-contents.active-tab{
     display: block;
+}
+/* SECTION2 */
+#skills{
+    padding: 30px 0;
+}
+.skills-list{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 50px;
+    margin-top: 50px;
+    width: 100%;
+    margin-left: 5%;
+}
+
+.skills-list div{
+    background: #262626;
+    padding: 40px;
+    font-size: 13px;
+    font-weight: 300;
+    border-radius: 10px;
+    transition: transform 0.5s;
+}
+
+.skillsI{
+    font-size: 50px;
+    margin-bottom: 10px;
+}
+.skills-list div h2{
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 15px;
+}
+.skills-list div a{
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
+    margin-top: 20px;
+    display: inline-block;
+}
+.skills-list div:hover{
+    background: #ff004f;
+    transform: translateY(-10px);
+}
+.divSkills{
+    width: 250px;
+}
+.skillsH1{
+    margin-left: 5%;
 }
